# FlightBrDelayPredict

./: .gitignore  Connect.py  EstationIncrement.ipynb  Experimento_Voos.ipynb  README.md  hello.py  pyproject.toml  ssh-keygen -t ed25519 -C "gaahdecastro@gmail.com"  ssh-keygen -t ed25519 -C "gaahdecastro@gmail.com".pub
Input/: airports.csv:Zone.Identifier  glossario_de_aerodromo.xls  glossario_de_aerodromo.xls:Zone.Identifier
