[project]
name = "flightbrdelaypredict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.7.0",
    "fastapi>=0.115.4",
    "meteostat>=1.6.8",
    "mlflow>=2.17.2",
    "mongo>=0.2.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pypl>=40.10",
    "ruff>=0.7.2",
    "seaborn>=0.13.2",
    "unidecode>=1.3.8",
    "uvicorn>=0.32.0",
    "xlrd>=2.0.1",
]
